--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
   <div class="first">
     <h1> Swimming Set Generator </h1>
     <h2 style="color:white"> Set Length </h2>
+    <button onclick="add_section();">add section</button>
     <button onclick="add_item();">add item</button>
     <br>
     <button onclick="getElementById('length').value = Number(getElementById('length').value)+50; display(getElementById('length'));">Increase Length</button>
