--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     }
     function add_section() {
 	section_name = prompt('what is the section name');
-	document.getElementById('text').innerText += '----------------' + section_name + '--------------';
+	document.getElementById('text').innerText += '\n----------------' + section_name + '--------------';
     }
         
   </script>
